<resources>
    <string name="app_name">RepasoUT3</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_internet">Internet</string>
    <string name="menu_map">Map</string>
    <string name="menu_thread">Threads</string>
    <string name="menu_firestore">Firestore DDBB</string>
    <string name="main_title">Repaso UT3</string>
    <string name="image_title">Sample image</string>
    <string name="camera_button">Take photo</string>
    <string name="url_hint">URL:</string>
    <string name="search_button">Search url</string>
    <string name="timer_et_hint">Timer seconds:</string>
    <string name="timer_btn">Start timer</string>
    <string name="init_timer_value">0</string>
    <string name="db_title">Products DB</string>
    <string name="db_prodIdEt">Product Id:</string>
    <string name="db_prodNameEt">Product name:</string>
    <string name="db_countryEt">Country:</string>
    <string name="db_priceEt">Price:</string>
    <string name="db_insert">Insert</string>
    <string name="db_search">Search</string>
    <string name="db_update">Update</string>
    <string name="db_delete">Delete</string>
</resources>