<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".FireBaseActivity">

    <TextView
        android:id="@+id/dbTitleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alef"
        android:text="@string/db_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/prodIdEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary"
        android:ems="10"
        android:fontFamily="@font/alef"
        android:hint="@string/db_prodIdEt"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/prodNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary"
        android:ems="10"
        android:fontFamily="@font/alef"
        android:hint="@string/db_prodNameEt"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/countryEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary"
        android:ems="10"
        android:fontFamily="@font/alef"
        android:hint="@string/db_countryEt"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/priceEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary"
        android:ems="10"
        android:fontFamily="@font/alef"
        android:hint="@string/db_priceEt"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/insertBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/alef"
        android:text="@string/db_insert"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/searchDbBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/alef"
        android:text="@string/db_search"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/alef"
        android:text="@string/db_update"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/alef"
        android:text="@string/db_delete"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>